Fix nav z-index

--- a/sass/2-modules/_nav.sass
+++ b/sass/2-modules/_nav.sass
@@ -25,6 +25,7 @@ $menu-font-mobile: modular-scale(1, $nav-ms-base, $nav-ms-ratio) $oswald
     justify-content: space-between
     align-items: center
     position: fixed
+    z-index: 999
     +size(100%, 96px)
     +padding(20px)
     background-color: $bg-color-nav
